grammar.js
    source_file: $ => seq(
      optional($._eos),
      repeat($._module_item),
    ),

    _module_item: $ => choice(
      $.namespace_directive,
      $.import_directive,
      $.assembly_attribute,
      $.module_attribute,
      $._module_declaration,
      $._statement,
    ),

    import_directive: $ => seq($._import_spec, $._eos),

    _import_spec: $ => seq(
      choice(
        seq(
          'import',
          field('name', $.qualified_name),
          optional(seq('(', optional($._expression_list), ')')),
          optional(seq('from', field('source', choice($.qualified_name, $.string)))),
          optional(seq('as', field('alias', $.identifier))),
        ),
        seq(
          'from',
          field('source', $.qualified_name),
          'import',
          choice('*', $._expression_list),
        ),
      ),
    ),

    _type_member: $ => choice(
      $.class_definition,
      $.interface_definition,
      $.enum_definition,
      $.callable_definition,
      $.method,
      $.constructor,
      $.destructor,
      $.event_declaration,
      $.property_definition,
      $.field,
    ),

    attribute_list: $ => seq(
      '[',
      optional(seq($.attribute, repeat(seq(',', $.attribute)))),
      ']',
      optional($._eos),
    ),

    attribute: $ => seq(
      field('name', $.qualified_name),
      optional($.argument_list),
    ),

    _attributes: $ => repeat1($.attribute_list),

    modifier: $ => choice(...MODIFIERS),

    class_definition: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      field('kind', choice('class', 'struct')),
      field('name', choice($.identifier, $.splice)),
      optional($.generic_parameters),
      optional($.base_types),
      field('body', $.type_body),
    ),

    interface_definition: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      'interface',
      field('name', choice($.identifier, $.splice)),
      optional($.generic_parameters),
      optional($.base_types),
      field('body', $.type_body),
    ),

    enum_definition: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      'enum',
      field('name', $.identifier),
      field('body', $.enum_body),
    ),

    callable_definition: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      'callable',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameter_list,
      optional($.return_type),
      $._eos,
    ),

    base_types: $ => seq(
      '(',
      optional(seq($._type, repeat(seq(',', $._type)))),
      ')',
    ),

    generic_parameters: $ => seq(
      '[',
      optional('of'),
      $.generic_parameter,
      repeat(seq(',', $.generic_parameter)),
      ']',
    ),

    generic_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('(', $._generic_constraints, ')')),
    ),

    _generic_constraints: $ => seq(
      choice('class', 'struct', 'constructor', $._type),
      repeat(seq(',', choice('class', 'struct', 'constructor', $._type))),
    ),

    type_body: $ => choice(
      seq(':', $._eos, $._end),
      seq(
        ':',
        optional(seq($._eos, optional($.docstring))),
        $._indent,
        optional($.docstring),
        optional($._eos),
        repeat(choice($._type_member, $._body_pass, $.splice_member, $.macro_statement, $._macro_member)),
        $._dedent,
        optional($._end),
      ),
    ),

    _body_pass: $ => seq($.pass_statement, $._eos),

    _macro_member: $ => seq($.macro_call, optional($.statement_modifier), $._eos),

    enum_body: $ => choice(
      seq(':', $._eos, $._end),
      seq(
        ':',
        optional(seq($._eos, optional($.docstring))),
        $._indent,
        optional($.docstring),
        optional($._eos),
        repeat(choice($.enum_member, $._body_pass, $.splice_member)),
        $._dedent,
        optional($._end),
      ),
    ),

    enum_member: $ => seq(
      optional($._attributes),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
      $._eos,
      optional($.docstring),
    ),

    method: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      'def',
      optional($.explicit_member),
      field('name', choice($._member_name, $.splice)),
      optional($.generic_parameters),
      $.parameter_list,
      optional($._attributes),
      optional($.return_type),
      choice(
        field('body', $.block),
        $._eos,
      ),
    ),

    constructor: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      'def',
      'constructor',
      optional($.generic_parameters),
      $.parameter_list,
      optional($._attributes),
      choice(field('body', $.block), $._eos),
    ),

    return_type: $ => seq('as', field('type', $._type)),

    parameter_list: $ => seq(
      '(',
      optional(seq($.parameter, repeat(seq(',', $.parameter)))),
      ')',
    ),

    parameter: $ => seq(
      optional($._attributes),
      optional(choice('*', 'ref')),
      field('name', choice($.identifier, $.splice)),
      optional(seq('as', field('type', $._type))),
      optional(seq('=', field('default', $._expression))),
    ),

    property_definition: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      optional($.explicit_member),
      field('name', choice($.identifier, $.splice, 'self')),
      optional(choice(
        seq('[', optional(seq($.parameter, repeat(seq(',', $.parameter)))), ']'),
        seq('(', optional(seq($.parameter, repeat(seq(',', $.parameter)))), ')'),
      )),
      optional(seq('as', field('type', $._type))),
      field('body', $.accessor_body),
    ),

    accessor_body: $ => choice(
      seq(
        ':',
        optional(seq($._eos, optional($.docstring))),
        $._indent,
        optional($.docstring),
        optional($._eos),
        repeat1($.accessor),
        $._dedent,
        optional($._end),
      ),
    ),

    accessor: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      field('kind', choice('get', 'set')),
      choice($._eos, field('body', $.block)),
    ),

    field: $ => seq(
      optional($._attributes),
      repeat($.modifier),
      field('name', choice($.identifier, $.splice)),
      optional(seq('as', field('type', $._type))),
      choice(
        seq('=', field('value', $._initializer)),
        $._eos,
      ),
      optional($.docstring),
    ),

    _initializer: $ => choice(
      seq($._expression_list, $._eos),
      seq($._expression, $.callable_expression),
      $.callable_expression,
    ),

    // -- statements ------------------------------------------------------

    // 'end' sits at the indent of the header that opened the block.
    _end: $ => prec.dynamic(10, seq('end', optional($._eos))),

    block: $ => choice(
      seq(
        ':',
        optional(seq($._eos, optional($.docstring))),
        $._indent,
        optional($.docstring),
        optional($._eos),
        repeat1($._statement),
        $._dedent,
        optional($._end),
      ),
      seq(':', $._eos, $._end),
      seq(
        ':',
        $._simple_statement,
        repeat(seq(';', optional($._simple_statement))),
        $._newline,
      ),
    ),

    _statement: $ => choice(
      $.if_statement,
      $.unless_statement,
      $.for_statement,
      $.while_statement,
      $.try_statement,
      $.nested_function,
      $.macro_statement,
      $.block_statement,
      $._terminated_statement,
    ),

    block_statement: $ => choice(
      seq($._expression, field('body', $.callable_expression)),
      seq(
        field('left', $._expression),
        field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '|=', '&=', '^=', '<<=', '>>=')),
        field('body', $.callable_expression),
      ),
      seq('return', field('body', $.callable_expression)),
      seq(
        field('name', $.identifier),
        'as',
        field('type', $._type),
        '=',
        field('body', $.callable_expression),
      ),
    ),

    _simple_statement: $ => choice(
      $.return_statement,
      $.yield_statement,
      $.raise_statement,
      $.break_statement,
      $.continue_statement,
      $.pass_statement,
      $.goto_statement,
      $.label_statement,
      $.variable_declaration,
      $.unpack_statement,
      $.macro_call,
      $.expression_statement,
    ),

    statement_modifier: $ => seq(
      choice('if', 'unless', 'while'),
      field('condition', $._expression),
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      repeat($.elif_clause),
      optional($.else_clause),
    ),

    elif_clause: $ => seq(
      'elif',
      field('condition', $._expression),
      field('consequence', $.block),
    ),

    else_clause: $ => seq('else', field('body', $.block)),

    for_statement: $ => seq(
      'for',
      field('left', $._declaration_list),
      'in',
      field('right', $._expression_list),
      field('body', $.block),
      optional($.or_clause),
      optional($.then_clause),
    ),

    or_clause: $ => seq('or', field('body', $.block)),
    then_clause: $ => seq('then', field('body', $.block)),

    try_statement: $ => seq(
      'try',
      field('body', $.block),
      repeat($.except_clause),
      optional($.failure_clause),
      optional($.ensure_clause),
    ),

    except_clause: $ => seq(
      'except',
      optional(field('name', $.identifier)),
      optional(seq('as', field('type', $._type))),
      optional(seq(choice('if', 'unless'), field('condition', $._expression))),
      field('body', $.block),
    ),

    failure_clause: $ => seq('failure', field('body', $.block)),
    ensure_clause: $ => seq('ensure', field('body', $.block)),

    macro_call: $ => prec.dynamic(-10, seq(
      field('name', $._macro_name),
      $._expression_list,
    )),

    return_statement: $ => prec.right(seq(
      'return',
      optional($._expression_list),
    )),

    yield_statement: $ => prec.right(seq('yield', optional($._expression_list))),
    pass_statement: $ => 'pass',
    unpack_statement: $ => seq(
      $.declaration,
      ',',
      optional($._declaration_list),
      '=',
      field('right', $._expression_list),
    ),

    _declaration_list: $ => seq($.declaration, repeat(seq(',', $.declaration))),

    declaration: $ => seq(
      field('name', $.identifier),
      optional(seq('as', field('type', $._type))),
    ),

    assignment: $ => prec.right(PREC.assign, seq(
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '|=', '&=', '^=', '<<=', '>>=')),
      field('right', $._expression_list),
    )),

    expression_statement: $ => $._expression,

    // -- types -----------------------------------------------------------

    _type: $ => choice(
      $.simple_type,
      $.array_type,
      $.callable_type,
      $.splice,
    ),

    simple_type: $ => prec.right(seq(
      field('name', choice($.qualified_name, 'callable', 'char')),
      optional(choice(
        $.generic_arguments,
        seq('of', choice('*', $._type)),
      )),
      optional('?'),
      repeat(choice('*', '**')),
    )),

    _type_list: $ => seq($._type, repeat(seq(',', $._type))),

    // -- expressions -----------------------------------------------------

    _expression: $ => choice(
      $.assignment,
      $.binary_expression,
      $.unary_expression,
      $.not_expression,
      $.type_test,
      $.type_conversion,
      $.generator_expression,
      $.conditional_expression,
      $.call,
      $.member_access,
      $.subscript,
      $.generic_reference,
      $.parenthesized_expression,
      $.tuple,
      $.typed_array,
      $.cast_expression,
      $.typeof_expression,
      $.char_literal,
      $.closure,
      $.quasi_quote,
      $.splice,
      $.omitted_member,
      $.identifier,
      alias('char', $.identifier),
      $.self,
      $.super,
      $.null,
      $.boolean,
      $.integer,
      $.float,
      $.timespan,
      $.string,
      $.regex,
      $.list,
      $.hash,
    ),

    _expression_list: $ => choice(
      ',',
      seq($._expression, repeat(seq(',', $._expression)), optional(',')),
    ),

    binary_expression: $ => {
      const table = [
        ['or', PREC.or],
        ['and', PREC.and],
        ['|', PREC.sum],
        ['^', PREC.sum],
        ['+', PREC.sum],
        ['-', PREC.sum],
        ['*', PREC.term],
        ['/', PREC.term],
        ['%', PREC.term],
        ['&', PREC.term],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
      ];

      return choice(
        ...table.map(([operator, precedence]) => prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.right(PREC.power, seq(
          field('left', $._expression),
          field('operator', '**'),
          field('right', $._expression),
        )),
        prec.left(PREC.compare, seq(
          field('left', $._expression),
          field('operator', choice('<', '>', '<=', '>=', '==', '!=', '=~', '!~', 'is', seq('is', 'not'), 'in', seq('not', 'in'))),
          field('right', $._expression),
        )),
      );
    },

    type_test: $ => prec.left(PREC.compare, seq($._expression, 'isa', field('type', $._type))),

    type_conversion: $ => prec.left(PREC.cast, seq(
      $._expression,
      field('operator', choice('as', 'cast')),
      field('type', $._type),
    )),

    generator_expression: $ => prec.right(seq(
      $._expression,
      repeat1(seq(
        'for',
        field('left', $._declaration_list),
        'in',
        field('right', $._expression),
        optional($.statement_modifier),
      )),
    )),

    call: $ => prec(PREC.call, seq(
      field('function', $._expression),
      $.argument_list,
      optional('?'),
      optional(choice($.hash, $.list_initializer)),
    )),

    argument_list: $ => seq(
      '(',
      optional(seq($.argument, repeat(seq(',', $.argument)))),
      ')',
    ),

    argument: $ => choice($.named_argument, $._expression),

    member_access: $ => prec(PREC.call, seq(
      field('object', $._expression),
      optional('?'),
      '.',
      field('member', choice($._member_name, $.splice)),
      optional('?'),
    )),

    subscript: $ => prec(PREC.call, seq(
      field('object', $._expression),
      optional('?'),
      '[',
      choice(
        seq('of', $._type_list),
        seq($.slice, repeat(seq(',', $.slice))),
      ),
      ']',
      optional('?'),
    )),

    slice: $ => choice(
      seq(':', optional(choice($._expression, seq(':', $._expression)))),
      seq($._expression, optional(seq(':', optional($._expression), optional(seq(':', $._expression))))),
    ),

    char_literal: $ => seq('char', '(', optional(choice($.string, $.integer)), ')'),

    closure: $ => seq(
      '{',
      optional(seq(optional(seq($.parameter, repeat(seq(',', $.parameter)))), '|')),
      optional($._closure_statement),
      repeat(seq(';', optional($._closure_statement))),
      '}',
    ),

    _closure_statement: $ => seq(
      choice($.return_statement, $.yield_statement, $.raise_statement, $.unpack_statement, $.macro_call, $.expression_statement),
      optional($.statement_modifier),
    ),

    callable_expression: $ => choice(
      $.block,
      seq(
        choice('do', 'def'),
        optional(seq($.parameter_list, optional($.return_type))),
        $.block,
      ),
    ),

    splice: $ => prec(PREC.unary, seq('$', $._expression)),

    list: $ => seq('[', optional($._expression_list), ']'),

    hash: $ => seq(
      '{',
      optional(seq($.key_value, repeat(seq(',', $.key_value)), optional(','))),
      '}',
    ),

    qualified_name: $ => prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),
